<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="10"
        tools:context="az.kerimov.financehome.activity.TransactionActivity">

    <TextView
            android:text="@string/labelDate"
            android:textSize="11sp"
            android:layout_width="50pt"
            android:calendarViewShown="true"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:textSize="12sp"
            android:layout_columnSpan="2"
            android:focusable="false"
            android:id="@+id/edDate"/>
    <TextView
            android:text="@string/labelAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"/>
    <EditText
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:ems="10"
            android:id="@+id/edAmount" android:inputType="numberSigned|numberDecimal"/>
    <Spinner
            android:layout_width="147dp"
            android:textSize="12sp"
            android:layout_height="wrap_content" android:id="@+id/edCurrency"/>
    <TextView
            android:text="@string/labelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content" android:id="@+id/edCategory"/>
    <TextView
            android:text="@string/labelSubCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content" android:id="@+id/edSubCategory"/>
    <TextView
            android:text="@string/labelWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textSize="12sp"
            android:layout_height="wrap_content" android:id="@+id/edWallet"/>
    <TextView
            android:text="@string/labelOtherWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textSize="12sp"
            android:layout_height="wrap_content" android:id="@+id/edWalletOther"/>
    <TextView
            android:text="@string/labelNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_columnSpan="1"
            android:textSize="12sp"
            android:ems="10"
            android:id="@+id/edNotes"/>
    <Button android:text="@string/labelAdd"
            android:layout_columnSpan="1" android:onClick="clickAdd"/>

    <ListView
            android:id="@+id/lvLastTransactions"
            android:layout_height="100pt"
            android:layout_columnSpan="3"
    />
    <Button android:text="@string/labelSettings"
            android:layout_columnSpan="3" android:onClick="clickSettings"/>
</GridLayout>
