<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        tools:context="az.kerimov.financehome.activity.CategoryActivity">
    <LinearLayout android:orientation="horizontal" android:layout_columnSpan="3"
    android:layout_height="wrap_content" android:layout_width="match_parent"
    android:id="@+id/panelCategoryTools" android:layout_gravity="right"
    android:visibility="invisible">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sub_categories"
                   android:onClick="clickOpenSubCategories"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove"
                   android:onClick="clickDeleteCategory"/>

    </LinearLayout>
<ListView android:layout_columnSpan="3" android:layout_width="match_parent" android:layout_height="200dp"
android:id="@+id/listCategories"></ListView>
    <TextView android:text="@string/labelCustomName" android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <EditText android:layout_columnSpan="2" android:id="@+id/edCategoryName" android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <TextView android:text="@string/labelOrienation" android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <Spinner android:layout_width="wrap_content"
             android:layout_height="wrap_content"
    android:id="@+id/edOrientation"></Spinner>
    <CheckBox android:text="@string/labelDebt" android:id="@+id/chkCategoryDebt"/>
    <Button android:layout_columnSpan="3" android:onClick="clickAddCategory" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/labelAdd"/>
</GridLayout>
