<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:columnCount="1"
        android:layout_height="match_parent"
        tools:context="az.kerimov.financehome.activity.WalletSettingsActivity">
<ListView
android:id="@+id/listWallets" android:layout_width="match_parent" android:layout_height="150dp"/>
    <GridLayout android:id="@+id/layAddWallet" android:columnCount="2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/labelCurrency" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <Spinner android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/edUserCurrency"/>
        <TextView android:text="@string/labelCustomName" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/edCustomName"/>
        <Button android:layout_width="match_parent" android:text="@string/labelAdd" android:layout_columnSpan="2" android:layout_height="wrap_content" android:onClick="clickAddWallet"/>
    </GridLayout>
</GridLayout>
